infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lumina-prod
  labels:
    env: production
    app: lumina
